# swagger/swagger.json
@@ -15,6 +15,93 @@
     },
     "basePath": "/v1",
     "paths": {
+        "/cuenta_bancaria_banco/": {
+            "get": {
+                "tags": [
+                    "cuenta_bancaria_banco"
+                ],
+                "description": "get Cuenta_bancaria_banco",
+                "operationId": "CuentaBancariaBancoController.GetAll",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Cuenta_bancaria_banco"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/cuenta_bancaria_banco/{id}": {
+            "get": {
+                "tags": [
+                    "cuenta_bancaria_banco"
+                ],
+                "description": "get Cuenta_bancaria_banco by id",
+                "operationId": "CuentaBancariaBancoController.GetOne",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Cuenta_bancaria_banco"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            }
+        },
         "/solicitud_avance/": {
             "get": {
                 "tags": [
@@ -193,12 +280,20 @@
         }
     },
     "definitions": {
+        "models.Cuenta_bancaria_banco": {
+            "title": "Cuenta_bancaria_banco",
+            "type": "object"
+        },
         "models.Solicitud_avance": {
             "title": "Solicitud_avance",
             "type": "object"
         }
     },
     "tags": [
+        {
+            "name": "cuenta_bancaria_banco",
+            "description": "CuentaBancariaBancoController operations for cuenta_bancaria_banco\n"
+        },
         {
             "name": "solicitud_avance",
             "description": "SolicitudAvanceController operations for Solicitud_avance\n"
